<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="Home"
        />
    <item
        android:id="@+id/saved_books"
        android:icon="@drawable/ic_books"
        android:title="Saved Books"
        />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="Settings"
        />
</menu>